# Multi-tenant-AI-chatbot-platform

./: .gitignore  DEPLOY.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0432ad4c7d83_add_chat_audit_logs.py  09eba4ba7c9f_add_metrics_to_chat_audit_logs.py  2c7d4a8b9f10_add_handoff_requests_table.py  4a9f7c2d1e6b_add_ops_audit_logs_table.py  6f1d9a2c4b3e_add_tenant_usage_limits_and_events.py  7124db9c5ee2_create_tenants_table.py  7dbd508bb970_add_document_visibility_and_tags.py  8e9c2a1f5b7d_add_tenant_channel_accounts.py  a1d9f3c7b8e4_add_avatar_url_to_tenant_bot_credentials.py  a53d1c623902_add_metrics_to_chat_audit_logs.py  aa7d2f3c19b4_add_handoff_internal_notes_table.py  b3175dbe9bfc_add_document_visibility_and_tags.py  b3e2c4d7f1aa_add_avatar_url_to_tenants.py  b4ec37c2ff22_add_metrics_to_chat_audit_logs.py  b62df508a8ec_rag_documents_and_chunks.py  b6f3d881c062_add_conversations_and_messages.py  c1d4e7f9a2b3_add_channel_health_fields.py  c4e8a92db117_add_ai_pause_fields_to_conversations.py  c7abb8027543_add_conversations_and_messages.py  d264a4bcb6b8_create_users_table.py  d27b82e5ef47_add_chunk_embeddings.py  (+7 more)
backend/app/: main.py
backend/deploy/: README.md  nginx.conf.example
backend/scripts/: check_alembic_single_head.py  check_migration_drift.py  run_tests.ps1
backend/tests/: conftest.py  test_admin_handoff_channels_flows.py  test_auth_password_reset.py  test_chat_router.py  test_tenant_smoke.py
(+117 files in other folders)
